# TexasAudit

./: .gitignore  LICENSE  Makefile  README.md  config.yaml.example  pyproject.toml  requirements.txt  run.sh
fraudit/: __init__.py  cli.py  config.py
fraudit/alerts/: __init__.py  manager.py
fraudit/database/: __init__.py  connection.py  models.py
fraudit/detection/: __init__.py  anomalies.py  confidentiality.py  contract_splitting.py  crossref.py  debarment.py  duplicates.py  employee_vendor.py  engine.py  fiscal_year_rush.py  ghost_vendors.py  network.py  related_party.py  vendor_clustering.py
fraudit/ingestion/: __init__.py  base.py  cmbl.py  comptroller.py  ethics.py  hhs_contracts.py  lbb.py  runner.py  salaries.py  sam_exclusions.py  scheduler.py  socrata.py  taxpermits.py  txdot.py  txsmartbuy.py  usaspending.py
fraudit/normalization/: __init__.py  fiscal_year.py  vendors.py
fraudit/pia/: manager.py
fraudit/tui/: __init__.py  app.py
tests/: __init__.py  test_basic.py
texasaudit/: __init__.py  cli.py  config.py
texasaudit/alerts/: __init__.py  manager.py
texasaudit/database/: __init__.py  connection.py  models.py
texasaudit/detection/: __init__.py  anomalies.py  confidentiality.py  contract_splitting.py  crossref.py  debarment.py  duplicates.py  employee_vendor.py  engine.py  fiscal_year_rush.py  ghost_vendors.py  network.py  related_party.py  vendor_clustering.py
texasaudit/ingestion/: __init__.py  base.py  cmbl.py  comptroller.py  ethics.py  lbb.py  runner.py  salaries.py  sam_exclusions.py  scheduler.py  socrata.py  taxpermits.py  txdot.py  txsmartbuy.py  usaspending.py
texasaudit/normalization/: __init__.py  addresses.py
texasaudit/pia/: __init__.py  manager.py
texasaudit/tui/: __init__.py  app.py
